crates/anodized/tests/compile_fail/spec_on_trait_type.rs
#![no_main]

use anodized::spec;

#[spec]
trait T {
    #[spec]
    type U;
}
