crates/anodized/tests/compile_fail/spec_on_trait_type.stderr
error: The #[spec] attribute doesn't yet support this item: trait type.
       If this is a problem for your use case, please open a feature
       request at https://github.com/mkovaxx/anodized/issues/new
 --> tests/compile_fail/spec_on_trait_type.rs:7:5
  |
7 |     #[spec]
  |     ^^^^^^^
